# journal-ai

./: .gitignore  Cargo.toml  README.md
src/: config.rs  journal.rs  main.rs  todos.rs  todos_test.rs
src/providers/: mod.rs  ollama.rs  openai.rs
