[package]
name = "journal-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
anyhow = "1"
chrono = "0.4"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"
tempfile = "3"

[[bin]]
name = "journal-ai"
path = "src/main.rs"
